update website and add teaching material

--- a/research.html
+++ b/research.html
@@ -23,18 +23,10 @@
     </nav>
 
     <main>
-        <div class="page-header" data-aos="fade-up">
+        <!-- <div class="page-header" data-aos="fade-up">
             <h1>Research</h1>
             <p>Time Series Forecasting, Neural Architecture Search, and Machine Learning</p>
-        </div>
-
-        <section class="collaboration-banner" data-aos="fade-up">
-            <div class="collab-content">
-                <h2>Open to Collaboration</h2>
-                <p>I'm always interested in collaborating on research projects related to time series forecasting, neural architecture search, and machine learning. Feel free to reach out if you'd like to discuss potential collaborations.</p>
-                <a href="mailto:zimenglyu@mail.rit.edu" class="collab-button">Get in Touch</a>
-            </div>
-        </section>
+        </div> -->
 
         <div class="research-projects">
             <section class="project-group" data-aos="fade-up" data-aos-delay="100">
