--- a/teaching.html
+++ b/teaching.html
@@ -5,10 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teaching - Zimeng Lyu</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <!-- CSS Files -->
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/teaching.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
@@ -36,47 +34,77 @@
         <section class="course-section" data-aos="fade-up">
             <div class="course-header">
                 <h2>DSCI-644: Software Engineering for Data Science</h2>
-                <span class="course-term">Fall 2024</span>
+                <span class="course-term">Spring 2025</span>
             </div>
 
             <!-- Course Overview -->
-            <div class="course-card">
+            <div class="course-overview">
                 <h3>Course Overview</h3>
                 <p>This course focuses on the software engineering principles and practices for data science applications. Students learn modern software development methodologies and tools essential for building robust data science solutions.</p>
-                <div class="course-quick-links">
-                    <a href="#syllabus" class="quick-link">Syllabus</a>
-                    <a href="#projects" class="quick-link">Projects</a>
-                    <a href="https://github.com/zimenglyu" class="quick-link">Course GitHub</a>
-                </div>
             </div>
 
             <!-- Course Materials -->
             <div class="materials-grid">
                 <!-- Syllabus Section -->
-                <div class="material-card" id="syllabus">
+                <div class="material-card">
                     <div class="material-header">
-                        <h3>Course Syllabus</h3>
-                        <span class="material-status">Coming Soon</span>
+                        <h3>Course Materials</h3>
                     </div>
-                    <div class="material-placeholder">
-                        <p>Course syllabus will be available here.</p>
+                    <div class="material-content">
+                        <div class="material-links">
+                            <a href="papers/DSCI-644-Syllabus.pdf" class="material-link">
+                                <span class="link-icon">📄</span>
+                                Course Syllabus
+                            </a>
+                            <a href="https://infrequent-receipt-901.notion.site/1819fee1f04380e09218dce09cecdc30" class="material-link" target="_blank">
+                                <span class="link-icon">📅</span>
+                                Course Calendar
+                            </a>
+                            <a href="https://infrequent-receipt-901.notion.site/Office-Hour-Arrangement-17f9fee1f04380168a68f9c4270ae434" class="material-link" target="_blank">
+                                <span class="link-icon">👥</span>
+                                Office Hours
+                            </a>
+                        </div>
                     </div>
                 </div>
 
                 <!-- Projects Section -->
-                <div class="material-card" id="projects">
+                <div class="material-card">
                     <div class="material-header">
                         <h3>Course Projects</h3>
                     </div>
-                    <div class="projects-list">
+                    <div class="material-content">
                         <!-- Project 1 -->
                         <div class="project-item">
                             <h4>Project 1: Software Development Life Cycle</h4>
-                            <div class="project-placeholder">
-                                <p>Project description and materials will be posted here.</p>
-                                <div class="project-links">
-                                    <span class="link-placeholder">Description</span>
-                                    <span class="link-placeholder">Code Template</span>
+                            <div class="project-content">
+                                <!-- Part 1 -->
+                                <div class="project-part">
+                                    <h5>Part 1: Environment Setup</h5>
+                                    <div class="project-links">
+                                        <a href="https://infrequent-receipt-901.notion.site/Project-1-Part-1-Environment-Setup-17f9fee1f0438063b659c15bf972a35c" class="material-link" target="_blank">
+                                            <span class="link-icon">📝</span>
+                                            Project Description
+                                        </a>
+                                        <a href="https://github.com/zimenglyu/DSCI-644-Project-1-1" class="material-link" target="_blank">
+                                            <span class="link-icon">💻</span>
+                                            GitHub Repository
+                                        </a>
+                                    </div>
+                                </div>
+                                <!-- Part 2 -->
+                                <div class="project-part">
+                                    <h5>Part 2: Simple ETL Pipeline</h5>
+                                    <div class="project-links">
+                                        <span class="material-link unreleased">
+                                            <span class="link-icon">📝</span>
+                                            Project Description (Coming Soon)
+                                        </span>
+                                        <span class="material-link unreleased">
+                                            <span class="link-icon">💻</span>
+                                            GitHub Repository (Coming Soon)
+                                        </span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -84,11 +112,16 @@
                         <!-- Project 2 -->
                         <div class="project-item">
                             <h4>Project 2: Testing and CI/CD Pipeline</h4>
-                            <div class="project-placeholder">
-                                <p>Project description and materials will be posted here.</p>
+                            <div class="project-content">
                                 <div class="project-links">
-                                    <span class="link-placeholder">Description</span>
-                                    <span class="link-placeholder">Code Template</span>
+                                    <span class="material-link unreleased">
+                                        <span class="link-icon">📝</span>
+                                        Project Description (Coming Soon)
+                                    </span>
+                                    <span class="material-link unreleased">
+                                        <span class="link-icon">💻</span>
+                                        GitHub Repository (Coming Soon)
+                                    </span>
                                 </div>
                             </div>
                         </div>
@@ -96,11 +129,16 @@
                         <!-- Project 3 -->
                         <div class="project-item">
                             <h4>Project 3: Model Deployment and API Development</h4>
-                            <div class="project-placeholder">
-                                <p>Project description and materials will be posted here.</p>
+                            <div class="project-content">
                                 <div class="project-links">
-                                    <span class="link-placeholder">Description</span>
-                                    <span class="link-placeholder">Code Template</span>
+                                    <span class="material-link unreleased">
+                                        <span class="link-icon">📝</span>
+                                        Project Description (Coming Soon)
+                                    </span>
+                                    <span class="material-link unreleased">
+                                        <span class="link-icon">💻</span>
+                                        GitHub Repository (Coming Soon)
+                                    </span>
                                 </div>
                             </div>
                         </div>
@@ -108,11 +146,16 @@
                         <!-- Project 4 -->
                         <div class="project-item">
                             <h4>Project 4: Final Team Project</h4>
-                            <div class="project-placeholder">
-                                <p>Project description and materials will be posted here.</p>
+                            <div class="project-content">
                                 <div class="project-links">
-                                    <span class="link-placeholder">Description</span>
-                                    <span class="link-placeholder">Code Template</span>
+                                    <span class="material-link unreleased">
+                                        <span class="link-icon">📝</span>
+                                        Project Description (Coming Soon)
+                                    </span>
+                                    <span class="material-link unreleased">
+                                        <span class="link-icon">💻</span>
+                                        GitHub Repository (Coming Soon)
+                                    </span>
                                 </div>
                             </div>
                         </div>
