update teaching content

--- a/teaching.html
+++ b/teaching.html
@@ -40,7 +40,7 @@
             <!-- Course Overview -->
             <div class="course-overview">
                 <h3>Course Overview</h3>
-                <p>This course focuses on the software engineering principles and practices for data science applications. Students learn modern software development methodologies and tools essential for building robust data science solutions.</p>
+                <p>This course focuses on the software engineering challenges of building scalable and highly available big data software systems. Software design and development methodologies and available technologies addressing the major software aspects of a big data system including software architectures, application design patterns, different types of data models and data management, and deployment architectures will be covered in this course.</p>
             </div>
 
             <!-- Course Materials -->
@@ -111,7 +111,7 @@
 
                         <!-- Project 2 -->
                         <div class="project-item">
-                            <h4>Project 2: Testing and CI/CD Pipeline</h4>
+                            <h4>Project 2: Advanced Batch Processing ETL Pipeline</h4>
                             <div class="project-content">
                                 <div class="project-links">
                                     <span class="material-link unreleased">
@@ -128,7 +128,7 @@
 
                         <!-- Project 3 -->
                         <div class="project-item">
-                            <h4>Project 3: Model Deployment and API Development</h4>
+                            <h4>Project 3: Database Normalization and Optimization</h4>
                             <div class="project-content">
                                 <div class="project-links">
                                     <span class="material-link unreleased">
@@ -145,7 +145,7 @@
 
                         <!-- Project 4 -->
                         <div class="project-item">
-                            <h4>Project 4: Final Team Project</h4>
+                            <h4>Project 4: Stream Processing ETL Pipeline</h4>
                             <div class="project-content">
                                 <div class="project-links">
                                     <span class="material-link unreleased">
