--- a/teaching.html
+++ b/teaching.html
@@ -96,13 +96,13 @@
                                 <div class="project-part">
                                     <h5>Part 2: Simple ETL Pipeline</h5>
                                     <div class="project-links">
-                                        <span class="material-link unreleased">
+                                        <a href="https://infrequent-receipt-901.notion.site/Project-1-Part-2-Medallion-Architecture-1869fee1f0438001ac8ee5706e5caae8?pvs=4" class="material-link" target="_blank"></a>
                                             <span class="link-icon">📝</span>
-                                            Project Description (Coming Soon)
+                                            Project Description 
                                         </span>
-                                        <span class="material-link unreleased">
+                                        <a href="https://github.com/zimenglyu/DSCI-644-Project-1-2" class="material-link" target="_blank"></a>
                                             <span class="link-icon">💻</span>
-                                            GitHub Repository (Coming Soon)
+                                            GitHub Repository
                                         </span>
                                     </div>
                                 </div>
