add design page

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <a href="./research.html" class="nav-link">Research</a>
                 <a href="./publications.html" class="nav-link">Publications</a>
                 <a href="./teaching.html" class="nav-link">Teaching</a>
+                <a href="./designs.html" class="nav-link">Designs</a>
             </div>
         </div>
     </nav>
@@ -35,6 +36,10 @@
                         Continue Learning, and Neural Architecture Search. Published in top-tier
                         venues like GECCO and Applied Soft Computing.
                     </p>
+                    <p class="hero-bio">
+                        Thesis Advisor: 
+                        <a href="https://www.se.rit.edu/~travis/index.html" target="_blank">Dr. Travis Desell</a>.
+                    </p>
                     <div class="hero-links">
                         <a href="https://github.com/zimenglyu" class="social-link">GitHub</a>
                         <a href="https://www.linkedin.com/in/zimenglyu/" class="social-link">LinkedIn</a>
@@ -52,12 +57,12 @@
                     <p>Online and Offline Time Series Forecasting, Stock Return Predictions</p>
                 </div>
                 <div class="research-card">
-                    <h3>Neural Architecture</h3>
-                    <p>NeuroEvolution, Neural Architecture Search</p>
+                    <h3>Neural Architecture Search</h3>
+                    <p>NeuroEvolution, Recurrent Neural Networks</p>
                 </div>
                 <div class="research-card">
-                    <h3>Machine Learning</h3>
-                    <p>Minimally Supervised Learning, Self Organizing Maps</p>
+                    <h3>Minimally Supervised Learning</h3>
+                    <p>Self Organizing Maps, Topological Projections</p>
                 </div>
             </div>
         </section>
@@ -65,6 +70,12 @@
         <section class="section" data-aos="fade-up">
             <h2 id="latest-news" class="section-title">Latest News</h2>
             <div class="news-grid">
+                <div class="news-card">
+                    <div class="news-date">January 2025</div>
+                    <div class="news-content">
+                        <h3>EvoAPPs Paper Acceptance</h3>
+                    </div>
+                </div>
                 <div class="news-card">
                     <div class="news-date">April 2024</div>
                     <div class="news-content">
