--- a/publications.html
+++ b/publications.html
@@ -21,6 +21,7 @@
                 <a href="./research.html" class="nav-link">Research</a>
                 <a href="./publications.html" class="nav-link active">Publications</a>
                 <a href="./teaching.html" class="nav-link">Teaching</a>
+                <a href="./designs.html" class="nav-link">Designs</a>
             </div>
         </div>
     </nav>
