--- a/research.html
+++ b/research.html
@@ -18,6 +18,7 @@
                 <a href="./research.html" class="nav-link active">Research</a>
                 <a href="./publications.html" class="nav-link">Publications</a>
                 <a href="./teaching.html" class="nav-link">Teaching</a>
+                <a href="./designs.html" class="nav-link">Designs</a>
             </div>
         </div>
     </nav>
