--- a/teaching.html
+++ b/teaching.html
@@ -19,6 +19,7 @@
                 <a href="./research.html" class="nav-link">Research</a>
                 <a href="./publications.html" class="nav-link">Publications</a>
                 <a href="./teaching.html" class="nav-link active">Teaching</a>
+                <a href="./designs.html" class="nav-link">Designs</a>
             </div>
         </div>
     </nav>
@@ -96,14 +97,14 @@
                                 <div class="project-part">
                                     <h5>Part 2: Simple ETL Pipeline</h5>
                                     <div class="project-links">
-                                        <a href="https://infrequent-receipt-901.notion.site/Project-1-Part-2-Medallion-Architecture-1869fee1f0438001ac8ee5706e5caae8?pvs=4" class="material-link" target="_blank"></a>
+                                        <a href="https://infrequent-receipt-901.notion.site/Project-1-Part-2-Medallion-Architecture-1869fee1f0438001ac8ee5706e5caae8?pvs=4" class="material-link" target="_blank">
                                             <span class="link-icon">📝</span>
-                                            Project Description 
-                                        </span>
-                                        <a href="https://github.com/zimenglyu/DSCI-644-Project-1-2" class="material-link" target="_blank"></a>
+                                            Project Description
+                                        </a>
+                                        <a href="https://github.com/zimenglyu/DSCI-644-Project-1-2" class="material-link" target="_blank">
                                             <span class="link-icon">💻</span>
                                             GitHub Repository
-                                        </span>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
